Add new services section to index.html
Added a new section to highlight new services offered by the company.

--- a/index.html
+++ b/index.html
@@ -206,3 +206,7 @@
 </body>
 </html>
 
+<section>
+  <h2>Our New Services</h2>
+  <p>We now offer laboratory reagent supply across Africa.</p>
+</section>
