--- a/index.html
+++ b/index.html
@@ -210,3 +210,32 @@
   <h2>Our New Services</h2>
   <p>We now offer laboratory reagent supply across Africa.</p>
 </section>
+<section id="physiotherapy-equipment" style="padding: 40px; background-color: #ffffff;">
+  <h2 style="color: #b8860b; text-align: center;">Physiotherapy Equipment</h2>
+  <p style="text-align: center; font-size: 16px; color: #333;">
+    Explore our range of physiotherapy devices designed for muscle recovery, rehabilitation, and wellness.
+  </p>
+
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 30px;">
+    
+    <div style="width: 280px; border: 1px solid #e0e0e0; border-radius: 12px; padding: 15px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.05);">
+      <img src="https://example.com/massage-gun.jpg" alt="Massage Gun" style="width: 100%; border-radius: 10px;">
+      <h3 style="color: #b8860b;">Deep Tissue Massage Gun</h3>
+      <p style="color: #555;">Ideal for muscle relaxation, pain relief, and post-workout recovery.</p>
+    </div>
+
+    <div style="width: 280px; border: 1px solid #e0e0e0; border-radius: 12px; padding: 15px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.05);">
+      <img src="https://example.com/ultrasound-therapy.jpg" alt="Ultrasound Therapy Machine" style="width: 100%; border-radius: 10px;">
+      <h3 style="color: #b8860b;">Ultrasound Therapy Machine</h3>
+      <p style="color: #555;">Effective for treating soft tissue injuries and chronic pain management.</p>
+    </div>
+
+    <div style="width: 280px; border: 1px solid #e0e0e0; border-radius: 12px; padding: 15px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.05);">
+      <img src="https://example.com/traction-unit.jpg" alt="Traction Unit" style="width: 100%; border-radius: 10px;">
+      <h3 style="color: #b8860b;">Traction Unit</h3>
+      <p style="color: #555;">Used for spinal alignment and relieving neck and back discomfort.</p>
+    </div>
+
+  </div>
+</section>
+
